# wasmer4-microbench

./: Cargo.toml  Makefile  README.md
benchmarks22/: Cargo.toml
benchmarks22/src/: lib.rs  wasmer22.rs  wasmer4.rs
benchmarks4/: Cargo.toml
benchmarks4/src/: lib.rs  wasmer4.rs
wasm/: Cargo.toml
wasm/src/: double.rs  fib.rs  lib.rs  sha.rs
