[package]
name = "benchmarks22"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.81"
wasmer_22 = { package = "wasmer", version = "2.2.1", default-features = false, features = [
    "singlepass",
    "cranelift",
    "sys",
    "universal",
    "wat",
] }
