[package]
name = "benchmarks4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.81"

wasmer_4 = { package = "wasmer", version = "4.2.6" }
wasmer_compiler_cranelift_4 = { package = "wasmer-compiler-cranelift", version = "4.2.6" }
wasmer_compiler_singlepass_4 = { package = "wasmer-compiler-singlepass", version = "4.2.6" }
